Add Guava to module graph
Guava now includes a module descriptor but Jimfs doesn't so we need to
manually add it to the module graph as a root module.